Refactorisation de FireStationCoverageService.